# instant-aeson

./: CHANGELOG.md  README.md  instant-aeson.cabal
nix/: build.ghc7101.nix  build.ghcjs.nix  default.nix
src/lib/Generics/Instant/Functions/: Aeson.hs
src/lib/Generics/Instant/Functions/Aeson/: TH.hs
tests/: Main.hs
