name:                instant-aeson
version:             0.1
author:              Renzo Carbonara
maintainer:          renzo@carbonara.com.ar
copyright:           Renzo Carbonara 2015
license:             BSD3
license-file:        LICENSE.txt
category:            Web
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.18
synopsis:            Generic Aeson instances through instant-generics

library
  hs-source-dirs: src/lib
  default-language: Haskell2010
  exposed-modules:
      Generics.Instant.Functions.Aeson
      Generics.Instant.Functions.Aeson.TH
  build-depends:
      aeson >=0.8 && <0.10
    , base >=4.8 && <4.9
    , instant-generics >=0.4 && <0.5
    , template-haskell >=2.10 && <2.11
  ghcjs-options: -Wall -Werror
  ghc-options: -Wall -Werror


test-suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends:
      base >= 4 && < 5
    , aeson
    , tasty >= 0.10
    , tasty-quickcheck >= 0.8
    , instant-aeson
    , instant-generics
